# ChangeLog for dev-tex/xcolor
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/ChangeLog,v 1.37 2009/03/18 18:55:23 armin76 Exp $

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> xcolor-2.11.ebuild:
  arm/s390/sh stable wrt #253551

  11 Mar 2009; Raúl Porcel <armin76@gentoo.org> xcolor-2.11.ebuild:
  Add ~arm/~s390/~sh

  01 Apr 2008; Alexis Ballier <aballier@gentoo.org> -xcolor-1.11-r1.ebuild,
  -xcolor-2.00-r1.ebuild:
  remove old

  15 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> xcolor-2.11.ebuild:
  amd64 stable wrt bug #208747

  11 Feb 2008; Brent Baude <ranger@gentoo.org> xcolor-2.11.ebuild:
  stable ppc64, bug 208747

  10 Feb 2008; Alexis Ballier <aballier@gentoo.org> xcolor-2.11.ebuild:
  keyword ~x86-fbsd

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org> xcolor-2.11.ebuild:
  alpha/ia64/sparc stable wrt #208747

  06 Feb 2008; nixnut <nixnut@gentoo.org> xcolor-2.11.ebuild:
  stable on ppc wrt bug #208747

  04 Feb 2008; Jeroen Roovers <jer@gentoo.org> xcolor-2.11.ebuild:
  Stable for HPPA (bug #208747).

  03 Feb 2008; Christian Faulhammer <opfer@gentoo.org> xcolor-2.11.ebuild:
  stable x86, bug 208747

  03 Feb 2008; Alexis Ballier <aballier@gentoo.org> xcolor-2.11.ebuild:
  generate fonts in the sandbox instead of using addwrite..

  18 Dec 2007; Jeroen Roovers <jer@gentoo.org> xcolor-2.11.ebuild:
  Marked ~hppa (bug #195815).

  27 Oct 2007; Fabian Groffen <grobian@gentoo.org> xcolor-2.00-r1.ebuild,
  xcolor-2.11.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  26 Oct 2007; Raúl Porcel <armin76@gentoo.org> xcolor-2.11.ebuild:
  Add ~ia64

  25 Oct 2007; Markus Rothe <corsair@gentoo.org> xcolor-2.11.ebuild:
  Added ~ppc64

*xcolor-2.11 (14 Oct 2007)

  14 Oct 2007; Alexis Ballier <aballier@gentoo.org> +xcolor-2.11.ebuild:
  version bump, make use of texmf-site, depend on tex packages that support it

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml: