@@ -1,4 +1,4 @@
 DIST xcolor211.zip 745959 RMD160 2d90e40b9c04cd535a89fb538c3799c0e9229394 SHA1 fc4bdfc5f31ecc894b8386fdb002c62d02155e5c SHA256 509cc5725339caa2ea5d2fe75cd69e96bb8b95ba2d8c1294ed6915c171c9ab3d
-EBUILD xcolor-2.11.ebuild 832 RMD160 2a78a02560bbe38f1cf07dea3e6c61c9d9eb7705 SHA1 c0418517ae3910caa421e601ba459e8aca66fc38 SHA256 0962b25487cd110ced916669018156cd987c55ed1b1593d7e73fa96793e4ca81
-MISC ChangeLog 4623 RMD160 e3a89ed865285c95824c18244dd3cfae6acb25c6 SHA1 1820687dc0f1a4b236ad0742b1510d04d75f07f4 SHA256 8b3aea7a09e4699c5cd2db9fe2d8285cd7b6c44daa6b77be8cd49c256dda69bb
+EBUILD xcolor-2.11.ebuild 798 RMD160 9a192f74b60c1c6ff1e780334b04d41892700054 SHA1 afd5eda8d82adeb96ffb8821b6373cf134bf2421 SHA256 c13a33aec3f782cd0a89d7c43bfa1fe650fc7273c4740672bf1ddcaa92037dbd
+MISC ChangeLog 4742 RMD160 68df2e081c8b719ad7e74757c27c0c2badb672a4 SHA1 3dc0b97289f2da1377646fbde35b30b222e82c73 SHA256 2b5869dcdc15122cab4ac01a664493199a79b15320295678b51c7d2dc0b6599c
 MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
