@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/xcolor-2.11.ebuild,v 1.15 2009/03/18 18:55:23 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/xcolor-2.11.ebuild,v 1.16 2009/05/30 07:17:52 ulm Exp $
 
 inherit latex-package
 
@@ -11,11 +11,9 @@ SRC_URI="http://www.ukern.de/tex/xcolor/ctan/${P//[.-]/}.zip"
 LICENSE="LPPL-1.2"
 SLOT="0"
 KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-
 IUSE=""
 
-RDEPEND="|| ( dev-texlive/texlive-latex
-	>=app-text/tetex-3.0 )"
+RDEPEND="dev-texlive/texlive-latex"
 
 DEPEND="${RDEPEND}
 	app-arch/unzip"
