@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/xcolor
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/ChangeLog,v 1.37 2009/03/18 18:55:23 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/ChangeLog,v 1.38 2009/05/30 07:17:52 ulm Exp $
+
+  30 May 2009; Ulrich Mueller <ulm@gentoo.org> xcolor-2.11.ebuild:
+  Remove app-text/tetex from dependencies, bug 227443.
 
   18 Mar 2009; Raúl Porcel <armin76@gentoo.org> xcolor-2.11.ebuild:
   arm/s390/sh stable wrt #253551
